working on html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="main_container">
+    <!-- ==== Menu Start ==== -->
     <div class="menu">
       <img src="./images/logo.svg" alt="">
       <ul>
@@ -26,21 +27,62 @@
         <li>About</li>
         <li>Contact</li>
       </ul>
+
+      <div class="menu_right">
+        <img src="./images/icon-cart.svg" alt="">
+        <img src="./images/image-avatar.png" alt="">
+      </div>
+    </div>
+    <!-- ==== Menu End ==== -->
+
+    <!-- ==== Product Start ==== -->
+
+    <!-- ==== Product Left images Start ==== -->
+    <div class="product_container">
+
+      <div class="product_images">
+        <div class="main_image">
+          <img src="./images/image-product-1.jpg" alt="">
+        </div>
+
+        <div class="thumbnails">
+          <img src="./images/image-product-1-thumbnail.jpg" alt="">
+          <img src="./images/image-product-2-thumbnail.jpg" alt="">
+          <img src="./images/image-product-3-thumbnail.jpg" alt="">
+          <img src="./images/image-product-4-thumbnail.jpg" alt="">
+        </div>
+      </div>
+      <!-- ==== Product Left images End ==== -->
+
+      <!-- ==== Product Right Details Start ==== -->
+      <div class="prodcut_details">
+
+        <h2>Sneaker Company</h2>
+        <h1>Fall Limited Edition Sneakers</h1>
+
+        <p>
+          These low-profile sneakers are your perfect casual wear companion. Featuring a
+          durable rubber outer sole, they’ll withstand everything the weather can offer.
+        </p>
+
+        <div class="price_container">
+          <div class="price_dollar">
+            $125.00
+          </div>
+          <div class="price_right">
+            50%
+          </div>
+        </div>
+        <div>$250.00</div>
+
+
+        0
+        Add to cart
+      </div>
+      <!-- ==== Product Right Details End ==== -->
     </div>
 
-    Sneaker Company
-
-    Fall Limited Edition Sneakers
-
-    These low-profile sneakers are your perfect casual wear companion. Featuring a
-    durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-    $125.00
-    50%
-    $250.00
-
-    0
-    Add to cart
+        <!-- ==== Product End ==== -->
   </div>
 
   <div class="attribution">
