--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
 
   <title>Frontend Mentor | E-commerce product page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./scss/styles.css">
 </head>
 <body>
 
   <div class="main_container">
     <!-- ==== Menu Start ==== -->
     <div class="menu">
-      <img src="./images/logo.svg" alt="">
+      <img src="./images/logo.svg" class="logo" alt="">
       <ul>
         <li>Collections</li>
         <li>Men</li>
@@ -75,9 +71,16 @@
         </div>
         <div>$250.00</div>
 
+        <div class="add_to_cart_container">
+          <div class="add">
+            0
+          </div>
+          <div class="button_add_to_cart">
+            Add to cart
+          </div>
+        </div>
 
-        0
-        Add to cart
+
       </div>
       <!-- ==== Product Right Details End ==== -->
     </div>
