working on menu scss

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </ul>
 
       <div class="menu_right">
-        <img src="./images/icon-cart.svg" alt="">
-        <img src="./images/image-avatar.png" alt="">
+        <img src="./images/icon-cart.svg" class="cart" alt="">
+        <img src="./images/image-avatar.png" class="avatar" alt="">
       </div>
     </div>
     <!-- ==== Menu End ==== -->
