--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   <title>Frontend Mentor | E-commerce product page</title>
 
   <link rel="stylesheet" href="./scss/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div class="main_container">
     <!-- ==== Menu Start ==== -->
     <div class="menu">
-      <img src="./images/logo.svg" class="logo" alt="">
+      <div class="logo">
+        <img src="./images/logo.svg" alt="">
+      </div>
       <ul>
         <li>Collections</li>
         <li>Men</li>
