product details css in  progress

--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
             50%
           </div>
         </div>
-        <div>$250.00</div>
+        <div class="stricked_price">$250.00</div>
 
         <div class="add_to_cart_container">
-          <div class="add">
-            0
+          <div class="cart_update">
+            <div class="minus">-</div>
+            <div class="zero">
+              0
+            </div>
+            <div class="plus">+</div>
           </div>
           <div class="button_add_to_cart">
             Add to cart
