--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             <div class="plus">+</div>
           </div>
           <div class="button_add_to_cart">
-            Add to cart
+            <img src="./images/icon-cart2.svg" class="cart2" alt="">
+            <div>
+              Add to cart
+            </div>
           </div>
         </div>
 
@@ -99,7 +102,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/GabrielV7x" target="_blank">GabrielV7x</a>.
   </div>
 </body>
 </html>
