css added to menu

--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
         <img src="./images/logo.svg" alt="">
       </div>
       <ul>
-        <li>Collections</li>
-        <li>Men</li>
-        <li>Women</li>
-        <li>About</li>
-        <li>Contact</li>
+        <div>
+          <li>Collections</li>
+        </div>
+        <div>
+          <li>Men</li>
+        </div>
+        <div>
+          <li>Women</li>
+        </div>
+        <div>
+          <li>About</li>
+        </div>
+        <div>
+          <li>Contact</li>
+        </div>
       </ul>
 
       <div class="menu_right">
