--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
         <!-- ==== Product End ==== -->
   </div>
 
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/GabrielV7x" target="_blank">GabrielV7x</a>.
   </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
