CSS menu cart popup done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
       </ul>
 
       <div class="menu_right">
-        <img src="./images/icon-cart.svg" class="cart" alt="">
+        <div>
+          <img src="./images/icon-cart.svg" class="cart" alt="">
+          <div class="cart_popup">
+            <div class="cart_title">
+              Cart
+            </div>
+            <div class="cart_content">
+              Your cart is empty
+            </div>
+          </div>
+
+        </div>
         <img src="./images/image-avatar.png" class="avatar" alt="">
       </div>
     </div>
