hover opacity added on thumbnails img

--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
         </div>
 
         <div class="thumbnails">
-          <img src="./images/image-product-1-thumbnail.jpg" alt="">
-          <img src="./images/image-product-2-thumbnail.jpg" alt="">
-          <img src="./images/image-product-3-thumbnail.jpg" alt="">
-          <img src="./images/image-product-4-thumbnail.jpg" alt="">
+          <!-- <div id="test"></div> -->
+          <img src="./images/image-product-1-thumbnail.jpg" class="thumb_img" alt="">
+          <img src="./images/image-product-2-thumbnail.jpg" class="thumb_img" alt="">
+          <img src="./images/image-product-3-thumbnail.jpg" class="thumb_img" alt="">
+          <img src="./images/image-product-4-thumbnail.jpg" class="thumb_img" alt="">
         </div>
       </div>
       <!-- ==== Product Left images End ==== -->
