--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
         <div class="thumbnails">
           <!-- <div id="test"></div> -->
-          <img src="./images/image-product-1-thumbnail.jpg" class="thumb_img" alt="">
-          <img src="./images/image-product-2-thumbnail.jpg" class="thumb_img" alt="">
-          <img src="./images/image-product-3-thumbnail.jpg" class="thumb_img" alt="">
-          <img src="./images/image-product-4-thumbnail.jpg" class="thumb_img" alt="">
+          <div><img src="./images/image-product-1-thumbnail.jpg" class="thumb_img" alt=""></div>
+          <div><img src="./images/image-product-2-thumbnail.jpg" class="thumb_img" alt=""></div>
+          <div><img src="./images/image-product-3-thumbnail.jpg" class="thumb_img" alt=""></div>
+          <div><img src="./images/image-product-4-thumbnail.jpg" class="thumb_img" alt=""></div>
         </div>
       </div>
       <!-- ==== Product Left images End ==== -->
@@ -128,6 +128,6 @@
     Coded by <a href="https://github.com/GabrielV7x" target="_blank">GabrielV7x</a>.
   </div>
 
-  <script src="index.js"></script>
+  <script src="js/index.js" ></script>
 </body>
 </html>
