function becomeMainImg updated + export/import module added to index.js

--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
     Coded by <a href="https://github.com/GabrielV7x" target="_blank">GabrielV7x</a>.
   </div>
 
-  <script src="js/index.js" ></script>
+  <script src="js/index.js" type="module"></script>
 </body>
 </html>
