overlay shadow added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="product_container">
 
       <div class="product_images">
-        <div class="main_image">
+        <div class="main_image" onclick="test()">
           <img src="./images/image-product-1.jpg" alt="">
         </div>
 
@@ -108,7 +108,7 @@
           </div>
           <div class="button_add_to_cart">
             <img src="./images/icon-cart2.svg" class="cart2" alt="">
-            <div>
+            <div onclick="test()">
               Add to cart
             </div>
           </div>
@@ -128,6 +128,13 @@
     Coded by <a href="https://github.com/GabrielV7x" target="_blank">GabrielV7x</a>.
   </div>
 
+  <!-- Lightbox -->
+  <div id="myModal">
+
+  </div>
+
+
+  <script src="js/lightbox.js"></script>
   <script src="js/index.js" type="module"></script>
 </body>
 </html>
