--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
     <div class="product_images">
       <span class="close cursor" onclick="closeModal()">×</span>
       <div class="main_image" onclick="test()">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
         <img src="./images/image-product-1.jpg" alt="">
       </div>
 
