js - function add to cart

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="button_add_to_cart">
             <img src="./images/icon-cart2.svg" class="cart2" alt="">
-            <div onclick="test()">
+            <div onclick="">
               Add to cart
             </div>
           </div>
